--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1> Aysia Webster's Websitte </h1>
   
+  <img src="personal artifact (4).jpg" alt="artifact" width="500" height="333">
   
 </body>
   
